--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
+    "react-scroll": "^1.8.9",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.12",
     "sweetalert2-react-content": "^5.0.7"
@@ -28,6 +29,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "netlify-cli": "^15.6.0",
     "vite": "^4.3.9"
   }
 }
